[project]
name = "bootcamp"
version = "0.1.0"
description = ""
authors = [
    {name = "Shunya Yamada"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "cognite-toolkit (>=0.5.28,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
